header and about html added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid Zakat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Let's finish internal evil</h1>
+    <header id="header">
+        <h1>Let's Finish Your Internal Evil</h1>
+        <p></p>
+        <a href="#">Donate Now</a>
+    </header>
+
+    <!-- Section -->
+    <section class="about-section">
+        <div class="about-content">
+            <div class="about-left">
+                <h2>Their lives depends on your donation</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit tenetur eius omnis magnam accusantium cum dolore iure aut enim illum sed quos quae ut cupiditate, ex minus exercitationem! Blanditiis harum modi asperiores natus earum nam itaque deserunt, id quos, odio labore quod consequuntur veniam similique facilis placeat animi. Dolor, quia.</p>
+                <a href="#">Donate for Zakat</a>
+            </div>
+            <div class="about-right">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Section -->
+    <section class="-section"></section>
+    <!-- Section -->
+    <section class="-section"></section>
+    <!-- Section -->
+    <section class="-section"></section>
+    <!-- Section -->
+    <section class="-section"></section>
+    <!-- Section -->
+    <footer id="footer"></footer>
 </body>
 </html>
