survive section html added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <h1>Let's Finish Your Internal Evil</h1>
         <p></p>
-        <a href="#">Donate Now</a>
+        <a class="btn" href="#">Donate Now</a>
     </header>
 
     <!-- Section -->
@@ -20,15 +20,28 @@
             <div class="about-left">
                 <h2>Their lives depends on your donation</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit tenetur eius omnis magnam accusantium cum dolore iure aut enim illum sed quos quae ut cupiditate, ex minus exercitationem! Blanditiis harum modi asperiores natus earum nam itaque deserunt, id quos, odio labore quod consequuntur veniam similique facilis placeat animi. Dolor, quia.</p>
-                <a href="#">Donate for Zakat</a>
+                <a class="btn" href="#">Explore More</a>
             </div>
             <div class="about-right">
-                <img src="" alt="">
+                <img src="images/donation0.jpg" alt="Donate Now Image">
             </div>
         </div>
     </section>
-    <!-- Section -->
-    <section class="-section"></section>
+
+    <!-- Survive Section -->
+    <section class="survive-section">
+        <div class="survive-content">
+            <div class="survive-left">
+                <img src="images/donation1.jpg" alt="Explore More Image">
+            </div>
+            <div class="survive-right">
+                <h2>They need us to survive</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fugiat molestiae inventore aut, harum impedit itaque temporibus iure dolore repellendus hic! Blanditiis omnis modi perspiciatis cumque eveniet? Quam culpa sed voluptatum nisi commodi, maiores exercitationem nam qui deserunt inventore, itaque expedita. Magnam deleniti eum laborum voluptate expedita rerum vero cumque.</p>
+                <a href="#" class="btn">Explore More</a>
+            </div>
+        </div>
+        
+    </section>
     <!-- Section -->
     <section class="-section"></section>
     <!-- Section -->
