Donation section html added

--- a/index.html
+++ b/index.html
@@ -42,8 +42,36 @@
         </div>
         
     </section>
-    <!-- Section -->
-    <section class="-section"></section>
+    <!-- Donation Section -->
+    <section class="Donation-section">
+        <div class="center-title">
+            <h2>Their lives depends on your donation</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla molestias blanditiis pariatur, explicabo laboriosam accusamus unde harum eum. Quo, quae?</p>
+        </div>
+        <div class="donation-content">
+            <div class="donation-box">
+                <img src="icons/clothes.svg" alt="Clothes icons">
+                <h4>Direct Help</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam harum quo ea cum cupiditate? Beatae cum aperiam assumenda, repellat harum molestiae sit accusamus totam. Repellendus sint illo aliquid officiis quisquam quod sapiente praesentium. Explicabo a cumque expedita provident nulla ratione labore modi, laboriosam asperiores ut autem nostrum eos libero assumenda.</p>
+            </div>
+            <div class="donation-box">
+                <img src="icons/clothes.svg" alt="Clothes icons">
+                <h4>Direct Help</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam harum quo ea cum cupiditate? Beatae cum aperiam assumenda, repellat harum molestiae sit accusamus totam. Repellendus sint illo aliquid officiis quisquam quod sapiente praesentium. Explicabo a cumque expedita provident nulla ratione labore modi, laboriosam asperiores ut autem nostrum eos libero assumenda.</p>
+            </div>
+            <div class="donation-box">
+                <img src="icons/clothes.svg" alt="Clothes icons">
+                <h4>Direct Help</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam harum quo ea cum cupiditate? Beatae cum aperiam assumenda, repellat harum molestiae sit accusamus totam. Repellendus sint illo aliquid officiis quisquam quod sapiente praesentium. Explicabo a cumque expedita provident nulla ratione labore modi, laboriosam asperiores ut autem nostrum eos libero assumenda.</p>
+            </div>
+            <div class="donation-box">
+                <img src="icons/clothes.svg" alt="Clothes icons">
+                <h4>Direct Help</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam harum quo ea cum cupiditate? Beatae cum aperiam assumenda, repellat harum molestiae sit accusamus totam. Repellendus sint illo aliquid officiis quisquam quod sapiente praesentium. Explicabo a cumque expedita provident nulla ratione labore modi, laboriosam asperiores ut autem nostrum eos libero assumenda.</p>
+            </div>
+            
+        </div>
+    </section>
     <!-- Section -->
     <section class="-section"></section>
     <!-- Section -->
