--- a/index.html
+++ b/index.html
@@ -72,11 +72,43 @@
             
         </div>
     </section>
+    <!-- images Section -->
+    <section class="images-section">
+        <img src="images/donation10.jpg" alt="Image">
+        <img src="images/donation10.jpg" alt="Image">
+        <img src="images/donation10.jpg" alt="Image">
+    </section>
+    <!-- charity Section -->
+    <section class="charity-section">
+        <div class="center-title">
+            <h2>Extend your hand of charity. Earn rewards for here after</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus error laborum ducimus praesentium tempore modi qui amet veniam eaque ex?</p>
+        </div>
+        <div class="charity-content">
+            <div class="charity-box">
+                <img src="images/donation12.png" alt="Image">
+                <h4>Zakat Fund</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero recusandae, nostrum ea repudiandae ipsum accusantium voluptas nulla consequuntur quasi voluptatibus iste! Quisquam nesciunt fugit aut sapiente accusamus aspernatur ducimus eveniet.</p>
+                <a href="#" class="charity-btn">Donate for Zakat</a>
+            </div>
+            <div class="charity-box">
+                <img src="images/donation12.png" alt="Image">
+                <h4>Zakat Fund</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero recusandae, nostrum ea repudiandae ipsum accusantium voluptas nulla consequuntur quasi voluptatibus iste! Quisquam nesciunt fugit aut sapiente accusamus aspernatur ducimus eveniet.</p>
+                <a href="#" class="charity-btn">Donate for Zakat</a>
+            </div>
+            <div class="charity-box">
+                <img src="images/donation12.png" alt="Image">
+                <h4>Zakat Fund</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero recusandae, nostrum ea repudiandae ipsum accusantium voluptas nulla consequuntur quasi voluptatibus iste! Quisquam nesciunt fugit aut sapiente accusamus aspernatur ducimus eveniet.</p>
+                <a href="#" class="charity-btn">Donate for Zakat</a>
+            </div>
+        </div>
+    </section>
     <!-- Section -->
-    <section class="-section"></section>
-    <!-- Section -->
-    <section class="-section"></section>
-    <!-- Section -->
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <h2>Eid ul Adha</h2>
+        <p>&copy; Copyright Zakat Foundation</p>
+    </footer>
 </body>
 </html>
